@@ -1,5 +1,8 @@
 === (ongoing) ===
 
+- Added RatingAdmin
+- Added average_rating field to Review model
+
 === 0.1.1 ===
 - Added is_editable function to review model
 
